--- a/manifest.yml
+++ b/manifest.yml
@@ -1,12 +1,12 @@
 ---
 # This manifest deploys a Python Flask application with a Cloudant database
 applications:
-- name: lab-bluemix-cf
+- name: nyu-product-service-s20
   path: .
   instances: 2
   memory: 64M
   routes:
-  - route: lab-bluemix-cf.us-south.cf.appdomain.cloud
+  - route: nyu-product-service-s20.us-south.cf.appdomain.cloud
   disk_quota: 1024M
   buildpacks: 
   - python_buildpack
