Updated manifest file to run ElephantSQL service

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
-# This manifest deploys a Python Flask application with a Cloudant database
+# This manifest deploys a Python Flask application with an ElephantSQL database
 applications:
 - name: nyu-product-service-s20
   path: .
@@ -12,7 +12,7 @@ applications:
   - python_buildpack
   timeout: 180
   services:
-  - Cloudant
+  - ElephantSQL
   env:
     FLASK_APP : service:app
     FLASK_DEBUG : false
