--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@ Flask-SQLAlchemy==2.4.1
 psycopg2-binary==2.8.3
 python-dotenv==0.10.3
 
+# runtime
+gunicorn==19.9.0
+honcho==1.0.1
+
 # Testing
 nose==1.3.7
 pinocchio==0.4.2
