--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ factory-boy==2.12.0
 coverage==4.5.4
 pylint>=2.4.1
 codecov==2.0.22
+
+# Behavior Driven Development
+selenium==3.141.0
+compare==0.2b0
+requests==2.22.0
