--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pylint>=2.4.1
 codecov==2.0.22
 
 # Behavior Driven Development
+behave==1.2.6
 selenium==3.141.0
 compare==0.2b0
 requests==2.22.0
