--- a/manifest.yml
+++ b/manifest.yml
@@ -5,8 +5,7 @@ applications:
   path: .
   instances: 2
   memory: 64M
-  routes:
-  - route: nyu-product-service-s20.us-south.cf.appdomain.cloud
+  domain: us-south.cf.appdomain.cloud
   disk_quota: 1024M
   buildpacks: 
   - python_buildpack
